<resources>
    <string name="app_name">Slimnow</string>
    <string name="navi_selection">Selection</string>
    <string name="top_settings">Settings</string>
    <string name="navi_gallery">Gallery</string>
    <string name="top_input_methods">Input Methods</string>
    <string name="main_top_slimnow">SlimNow</string>
    <string name="settings_top_global_settings">Global Settings</string>
    <string name="prefer_view_root">View Root Directory</string>
    <string name="prefer_view_root_summary">Go to emulator root storage folder</string>
    <string name="setup_app_icon_desc">App Icon</string>
    <string name="setup_copyright">Copyright © SlimNow developers</string>
    <string name="setup_welcome_message">Welcome to SlimNow emulator, a Sony Playstation 2 emulator written from scratch using Kotlin and C++ for armv8a devices</string>
    <string name="setup_frame_tittle">Setup your emulator</string>
    <string name="setup_button_next">Next</string>
    <string name="setup_frame_root">Select Root Directory</string>
    <string name="setup_frame_root_summary">Where your emulator will be hosted locally</string>
    <string name="navi_statistics">Statistics</string>
    <string name="selection_empty_title">Select some ROMs directories</string>
    <string name="selection_empty_summary">No ROM .iso has found, please add new paths in your emulator ROM directories!</string>
    <string name="selection_empty_button">Open ROMs paths</string>
</resources>