<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SetupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="44dp"

        android:contentDescription="@string/setup_app_icon_desc"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setup_copyright"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:paddingStart="64dp"
        android:paddingEnd="64dp"

        android:text="@string/setup_welcome_message"
        android:textAlignment="center"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingTop="32dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_frame_tittle"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="16dp"
                />

            <RelativeLayout
                android:id="@+id/selectRootDirectory"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/selectRootTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_frame_root"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/selectRootCheck"
                    />

                <TextView
                    android:id="@+id/selectRootSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/setup_frame_root_summary"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"

                    android:layout_toEndOf="@+id/selectRootCheck"
                    />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/selectRootCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/selectRootSummary"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:clickable="false"

                    app:checkedState="unchecked"
                    />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/setupNext"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"

        android:text="@string/setup_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>